--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,9 +1,12 @@
 .header {
-    width: 1110px;
-    margin: 60px auto;
+    width: 100vw;
+}
+
+.header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 64px 165px;
 }
 
 .nav-header {
