--- a/src/components/CardContact/styles.css
+++ b/src/components/CardContact/styles.css
@@ -18,7 +18,7 @@
 }
 
 .btn-contato {
-    text-decoration: none;
+    background-color: transparent;
     font-family: 'Public Sans', sans-serif;
     font-weight: 400;
     font-size: 12px;
