feat/page portifolio

--- a/src/pages/Portifolio/styles.css
+++ b/src/pages/Portifolio/styles.css
@@ -1,3 +1,51 @@
-h1 {
-    padding: 24px 165px;
+.portfolio {
+    padding: 0 165px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-portfolio {
+    width: 50%;
+    height: 500px;
+}
+
+.container {
+    width: 50%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 80px 25px 100px;
+}
+
+.container__h {
+    font-family: 'Ibarra Real Nova', serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #33323D;
+    margin-bottom: 28px;
+}
+
+.container__p {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
+    margin-bottom: 24px;
+}
+
+.container__btn {
+    all: unset;
+    cursor: pointer;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: #33323D;
+    width: 175px;
+    height: 48px;
+    border: 1px solid #33323D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
