--- a/src/pages/Contact/styles.css
+++ b/src/pages/Contact/styles.css
@@ -1,3 +1,107 @@
-h1 {
-    padding: 24px 165px;
+.entre-em-contato {
+    padding: 0 165px;
+}
+
+.texto {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-top: rgba(51, 50, 61, 0.15) solid 1px;
+    padding: 48px 0;
+}
+
+.titulo {
+    font-family: 'Ibarra Real Nova', serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #33323D;
+}
+
+.informacoes {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
+}
+
+.informacoes__imagens {
+    display: flex;
+    gap: 15px;
+    padding: 54px 0 48px;
+}
+
+.informacoes__imagens-btn {
+    all: unset;
+    cursor: pointer;
+}
+
+.pagina-contato {
+    padding: 0 165px;
+}
+
+.formulario {
+    display: flex;
+    justify-content: space-between;
+    border-top: rgba(51, 50, 61, 0.15) solid 1px;
+    padding: 48px 0 100px;
+}
+
+.inputs {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.aviso {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #c71212;
+    margin-bottom: 24px;
+}
+
+.label {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 30px;
+    color: #33323D;
+    margin-bottom: 8px;
+}
+
+.input-menor {
+    width: 100%;
+    height: 48px;
+    background: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.1;
+    margin-bottom: 24px;
+}
+
+.input-maior {
+    width: 100%;
+    height: 96px;
+    background: #33323D;
+    mix-blend-mode: normal;
+    opacity: 0.1;
+    margin-bottom: 24px;
+}
+
+.input-btn {
+    text-decoration: none;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: #FFFFFF;
+    width: 200px;
+    height: 48px;
+    background: #203A4C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
