--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -5,7 +5,7 @@
 .hero {
     width: 100%;
     height: 600px;
-    background-image: url('../../assets/agenda.png');
+    background-image: url('../../assets/home-agenda.png');
     background-repeat: no-repeat;
     background-size: 100%;
     object-fit: cover;
