--- a/src/pages/Projects/styles.css
+++ b/src/pages/Projects/styles.css
@@ -1,3 +1,134 @@
-h1 {
-    padding: 24px 165px;
+.projects {
+    padding: 0 165px;
+}
+
+.hero {
+    width: 100%;
+    height: 100%;
+}
+
+.descricao {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.aside {
+    width: 28%;
+    height: 100%;
+    border-top: rgba(51, 50, 61, 0.15) solid 1px;
+    border-bottom: rgba(51, 50, 61, 0.15) solid 1px;
+    padding: 48px 0;
+}
+
+.aside__titulo {
+    font-family: 'Ibarra Real Nova', serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #33323D;
+    margin-bottom: 29px;
+}
+
+.aside__p1 {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
+    margin-bottom: 53px;
+}
+
+.aside__p-verde {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    color: #5FB4A2;
+    margin-bottom: 16px;
+}
+
+.aside__btn {
+    all: unset;
+    cursor: pointer;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: #33323D;
+    width: 178px;
+    height: 48px;
+    border: 1px solid #33323D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+}
+
+.projeto {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+}
+
+.projeto__titulo {
+    font-family: 'Ibarra Real Nova', serif;
+    font-weight: 400;
+    font-size: 32px;
+    color: #33323D;
+    margin-bottom: 28px;
+}
+
+.projeto__p {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 30px;
+    color: #33323D;
+    margin-bottom: 40px;
+}
+
+.projeto__img {
+    width: 100%;
+    height: 100%;
+    border: #FFF solid 4px;
+    margin-bottom: 32px;
+}
+
+.links {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 32px 0;
+    border-top: rgba(51, 50, 61, 0.15) solid 1px;
+    border-bottom: rgba(51, 50, 61, 0.15) solid 1px;
+}
+
+.direcional {
+    display: flex;
+    justify-content: space-between;
+}
+
+.direcional-seta {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
+.seta {
+    all: unset;
+    cursor: pointer;
+}
+
+.direcional-h {
+    font-family: 'Ibarra Real Nova', serif;
+    font-weight: 400;
+    font-size: 32px;
+    color: #33323D;
+}
+
+.direcional-span {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #33323D;
 }
